[gd_scene load_steps=10 format=3 uid="uid://c3lalm5iur72i"]

[ext_resource type="Script" uid="uid://blcn23bs1jhku" path="res://Scripts/enemy_knight.gd" id="1_toogj"]
[ext_resource type="Texture2D" uid="uid://crh7y4ey8nxfa" path="res://Assets/sprites/killert.png" id="2_wuvmc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wsjdf"]
size = Vector2(25, 21)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fqtt2"]
size = Vector2(27.5, 23.5)

[sub_resource type="AtlasTexture" id="AtlasTexture_3d5bw"]
atlas = ExtResource("2_wuvmc")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_31aeu"]
atlas = ExtResource("2_wuvmc")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vsxd0"]
atlas = ExtResource("2_wuvmc")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mvkxb"]
atlas = ExtResource("2_wuvmc")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_4ra3w"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3d5bw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_31aeu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vsxd0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mvkxb")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[node name="KillerT" type="RigidBody2D" groups=["enemies"]]
collision_layer = 3
script = ExtResource("1_toogj")

[node name="BodyCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_wsjdf")

[node name="AttackArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("RectangleShape2D_fqtt2")

[node name="RayCast2D_Right" type="RayCast2D" parent="."]
target_position = Vector2(12, 0)

[node name="RayCast2D_Left" type="RayCast2D" parent="."]
target_position = Vector2(-13, 0)

[node name="RayCast2D_Right_Down" type="RayCast2D" parent="."]
position = Vector2(12, 0)
target_position = Vector2(0, 11)

[node name="RayCast2D_Left_Down" type="RayCast2D" parent="."]
position = Vector2(-13, 0)
target_position = Vector2(0, 11)

[node name="Body" type="AnimatedSprite2D" parent="."]
position = Vector2(0, 1)
sprite_frames = SubResource("SpriteFrames_4ra3w")
animation = &"run"
autoplay = "run"

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="animation_finished" from="Body" to="." method="_on_animated_sprite_2d_animation_finished"]
